# sdk

./: .pre-commit-config.yaml  CONTRIBUTING.md  pyproject.toml
scripts/: install-hooks.sh
scripts/hooks/: check_commit_msg.sh  check_conflict_markers.sh  check_merge_parent.sh
src/ai_sdk/: generate_text.py  tool.py
src/ai_sdk/providers/: _multimodal.py  anthropic.py  gemini.py  openai.py
tests/: test_providers_native.py
