[project]
name = "ai-sdk-python"
packages = ["src/ai_sdk"]
version = "0.1.1"
description = "The easiest, safest, and cleanest way to use AI in your Python code. Inspired by the Vercel AI SDK."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Asanshay Gupta", email = "asanshay@bharatgupta.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=1.93.2",
    "anthropic>=0.111.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.1.1",
    "pydantic>=2.7.1",
]
[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "python-dotenv>=1.1.1",
    "pre-commit>=4.0.0",
    "ruff>=0.11.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/ai_sdk"]

# Ruff — also enforced by pre-commit hooks (see .pre-commit-config.yaml)
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
